@@ -1,3 +1,15 @@
+2008-11-11  Ulrich Drepper  <drepper@redhat.com>
+
+	* resolv/nss_dns/dns-host.c (gaih_getanswer_slice): Don't abort for
+	unknown request types for now.
+
+2008-11-11  Roland McGrath  <roland@redhat.com>
+
+	* sysdeps/x86_64/configure: New file.
+
+	* configure.in: Add AC_SUBST(libc_cv_cpp_asm_debuginfo).
+	* configure: Regenerated.
+
 2008-11-03  Martin Schwidefsky  <schwidefsky@de.ibm.com>
 
 	* sysdeps/s390/s390-64/dl-trampoline.S (_dl_runtime_profile): Use the
